--- a/Edukatorplus-aplikacija-IKI-main/EdukatorPlus/pom.xml
+++ b/Edukatorplus-aplikacija-IKI-main/EdukatorPlus/pom.xml
@@ -4,11 +4,11 @@
     
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.example</groupId>
-    <artifactId>edukator-plus</artifactId>
+    <artifactId>EdukatorPlus</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>edukator-plus</name>
+    <name>EdukatorPlus</name>
     <description>Edukator+ - aplikacija za radionice</description>
 
     <parent>
