--- a/Edukatorplus-aplikacija-IKI-main/EdukatorPlus/src/main/resources/application.properties
+++ b/Edukatorplus-aplikacija-IKI-main/EdukatorPlus/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+
