--- a/Edukatorplus-aplikacija-IKI-main/EdukatorPlus/src/main/resources/application.properties
+++ b/Edukatorplus-aplikacija-IKI-main/EdukatorPlus/src/main/resources/application.properties
@@ -7,4 +7,5 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
